[package]
name = "cpp-derive"
version = "0.1.0"
edition = "2021"
keywords = ["incremental", "parsing", "cuda"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/theHamsta/cpp-derive"
license = "MIT"
authors = ["Stephan Seitz <stephan.seitz@fau.de>"]

[dependencies]
tera = "1.15.0"
tree-sitter-cuda = "0.1.0"
tree-sitter = "0.20.1"
clap = { version = "3.0.0-rc.1", features = ["derive", "suggestions"] }
anyhow = "1.0"
thiserror = "1.0.30"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5.4"
once_cell = "1.8.0"
